ajout de JSF comme techno web
JSF est une technologie web envisagée pour le projet

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-BSites à scanner :
+Sites à scanner :
 - voyages-sncf.com
 - ryanair.com
 - eurolines.fr
@@ -13,10 +13,4 @@ Technologies web :
 - Servlet & JSP
 - Wicket
 - Struts2
-B
-B
-B
-
-C
-C
-eblabla
+- JSF
